clusters/cdelashmutt-kind/cluster-config/config/auth-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-server
  namespace: auth-server
spec:
  selector:
    app: auth-server
  ports:
  - port: 9000
    targetPort: 9000
